# rules_python

examples/bzlmod/: MODULE.bazel  __init__.py  __main__.py  test.py
